objects/Vetting_Questionnaire__c.object
<CustomObject>
    <fields>
        <fullName>Proximity_to_closest_main_street__c</fullName>
        <inlineHelpText>If not a c-store or truck stop!</inlineHelpText>
        <label>Proximity to closest main street</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 1 mi</fullName>
                </value>
                <value>
                    <fullName>1-3 mi</fullName>
                </value>
                <value>
                    <fullName>3-5 mi</fullName>
                </value>
                <value>
                    <fullName>&gt; 5 mi</fullName>
                </value>
                <value>
                    <fullName>&lt; 1k feet</fullName>
                    <isActive>false</isActive>
                    <label>&lt; 1k feet</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommendations_for_increasing_revenue__c</fullName>
        <label>Recommendations for increasing revenue?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Redemption_device_needs_relocation__c</fullName>
        <label>Redemption device needs relocation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_Area__c</fullName>
        <label>Retail Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Downtown</fullName>
                </value>
                <value>
                    <fullName>Strip Mall</fullName>
                </value>
                <value>
                    <fullName>Thoroughfare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Server_has_easy_access_to_players__c</fullName>
        <label>Server has easy access to players?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size_of_the_Gaming_Area__c</fullName>
        <label>Size of the Gaming Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small (Less than 800 sq ft)</fullName>
                </value>
                <value>
                    <fullName>Average (800-1200 sq ft)</fullName>
                </value>
                <value>
                    <fullName>Large (1200+ sq ft)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sources_Foot_Traffic__c</fullName>
        <label>Sources of Foot Traffic</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial (office)</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Transportation (main route – highway, busy thoroughfare)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_relationships_to_be_aware_of__c</fullName>
        <label>Special relationships to be aware of</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Specific_Style_Food__c</fullName>
        <label>Specific Style of Food</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Style_Food__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fast Food (McDonalds)</fullName>
                </value>
                <value>
                    <fullName>Fast Casual (Panera)</fullName>
                </value>
                <value>
                    <fullName>Family Style</fullName>
                </value>
                <value>
                    <fullName>Café</fullName>
                </value>
                <value>
                    <fullName>Diner</fullName>
                </value>
                <value>
                    <fullName>Pub</fullName>
                </value>
                <value>
                    <fullName>Bar &amp; Grill</fullName>
                </value>
                <value>
                    <fullName>Premium casual (TGIF)</fullName>
                </value>
                <value>
                    <fullName>Mexican</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_AE_Gaming_Stool_Quantity__c</fullName>
        <label>Standard AE Gaming Stool Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Steel_Drink_Cart_Spacer_Quantity__c</fullName>
        <label>Steel Drink Cart Spacer Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Style_Food__c</fullName>
        <label>Style of Food</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>American</fullName>
                </value>
                <value>
                    <fullName>Ethnic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_the_placement_of_gaming_area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support the placement of gaming area?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Surrounding_food_beverage_competitors__c</fullName>
        <label>Surrounding food &amp; beverage competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Indoor_Signs__c</fullName>
        <label>Total Indoor Signs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Non_Compliant_Indoor_Signs__c</fullName>
        <label>Total Non-Compliant Indoor Signs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Non_Compliant_Outdoor_Signs__c</fullName>
        <label>Total Non-Compliant Outdoor Signs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Outdoor_Signs__c</fullName>
        <label>Total Outdoor Signs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Entertainment__c</fullName>
        <label>Type of Entertainment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bingo</fullName>
                </value>
                <value>
                    <fullName>Trivia</fullName>
                </value>
                <value>
                    <fullName>Live Music</fullName>
                </value>
                <value>
                    <fullName>Karaoke</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_POS_System__c</fullName>
        <label>Type of POS System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Segregation_for_Gaming_Area__c</fullName>
        <label>Type of Segregation for Gaming Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Separate Room</fullName>
                </value>
                <value>
                    <fullName>Half Wall</fullName>
                </value>
                <value>
                    <fullName>Stanchions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Services_in_Gaming_Area__c</fullName>
        <inlineHelpText>Select all that apply</inlineHelpText>
        <label>Type of Services in Gaming Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Snack Station</fullName>
                </value>
                <value>
                    <fullName>Beverage Station</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_flooring_in_gaming_area__c</fullName>
        <label>Type of flooring in gaming area?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Carpet</fullName>
                </value>
                <value>
                    <fullName>Tile</fullName>
                </value>
                <value>
                    <fullName>Hardwood</fullName>
                </value>
                <value>
                    <fullName>Laminate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_That_Changed_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User That Changed Status</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Location_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VGT_Notes__c</fullName>
        <label>VGT Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vetting_Questionnaire_RelatedList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Location Assessments</relationshipLabel>
        <relationshipName>Vetting_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weaknesses_of_current_location__c</fullName>
        <label>Weaknesses of current location?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Weekly_Hours_of_Operation__c</fullName>
        <label>Weekly Hours of Operation</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_are_competitor_marketing_strategies__c</fullName>
        <label>What are competitor marketing strategies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                </value>
                <value>
                    <fullName>Yelp</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_day_and_time_did_you_visit__c</fullName>
        <label>What day and time did you visit?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_does_their_food_menu_consist_of__c</fullName>
        <label>What does their food menu consist of?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_is_the_estimated_HPD__c</fullName>
        <label>What is the estimated HPD?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>What_is_the_probability_of_going_live__c</fullName>
        <label>What is the probability of going live?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>What_is_their_performance__c</fullName>
        <label>What is their performance?</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_your_recommended_alternative__c</fullName>
        <label>What is your recommended alternative?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_type_of_advertising_is_being_used__c</fullName>
        <inlineHelpText>radio, newspaper, magazine clip, etc.</inlineHelpText>
        <label>What type of advertising is being used?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_type_of_businesses_are_around__c</fullName>
        <label>What type of businesses are around?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_type_of_marketing_is_being_used__c</fullName>
        <inlineHelpText>signs, posters, window decals, placemats, etc.</inlineHelpText>
        <label>What type of marketing is used there?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Where_is_gaming_area_in_relation_to_bar__c</fullName>
        <label>Where is gaming area in relation to bar?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-3 Feet</fullName>
                </value>
                <value>
                    <fullName>4-6 Feet</fullName>
                </value>
                <value>
                    <fullName>7-9 Feet</fullName>
                </value>
                <value>
                    <fullName>&gt; 9 Feet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Where_is_redemption_machine_located__c</fullName>
        <inlineHelpText>Close to VGTs, Furthest from the door, etc.</inlineHelpText>
        <label>Where is redemption machine located?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Where_is_the_establishment_located__c</fullName>
        <inlineHelpText>Strip Mall, Off Beaten Path, Downtown</inlineHelpText>
        <label>Where is the establishment located?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Who_manages_day_to_day_activity__c</fullName>
        <label>Who manages day-to-day activity?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                    <label>Partner (investor, owner&apos;s family member, etc.)</label>
                </value>
                <value>
                    <fullName>Employee</fullName>
                    <label>Employee (non-partner, including both manager and clerk- if there is only one clerk)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_services_the_gaming_area__c</fullName>
        <label>Who services the gaming area?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bartender</fullName>
                </value>
                <value>
                    <fullName>Wait Staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_will_service_the_gaming_area__c</fullName>
        <label>Who will service the gaming area?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bartender</fullName>
                </value>
                <value>
                    <fullName>Wait Staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_do_they_want_to_leave_current_TO__c</fullName>
        <label>Why do they want to leave current TO</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Why_doesnt_location_have_gaming__c</fullName>
        <inlineHelpText>Select all that apply</inlineHelpText>
        <label>Why doesn&apos;t location have gaming?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Owners</fullName>
                </value>
                <value>
                    <fullName>New Corporation</fullName>
                </value>
                <value>
                    <fullName>Competitor TO Pulled Out</fullName>
                </value>
                <value>
                    <fullName>Denied Gaming License</fullName>
                </value>
                <value>
                    <fullName>Opt Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_has_establishment_never_had_gaming__c</fullName>
        <label>Why has establishment never had gaming?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Why_might_target_locations_improve__c</fullName>
        <label>Why might target locations improve?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Will_gaming_area_need_addt_l_electric__c</fullName>
        <label>Will gaming area need addt&apos;l electric?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_gaming_area_need_to_be_located__c</fullName>
        <label>Will gaming area need to be relocated?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_redemption_be_in_gaming_area__c</fullName>
        <label>Will redemption be in gaming area?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_the_6th_Machine_Fit__c</fullName>
        <label>Will the 6th Machine Fit?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X10_Spacer_Quantity__c</fullName>
        <label>10&quot; Spacer Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X12_Spacer_Quantity__c</fullName>
        <label>12&quot; Spacer Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X16_Spacer_Quantity__c</fullName>
        <label>16&quot; Spacer Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yelp_Rating__c</fullName>
        <label>Yelp Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yelp__c</fullName>
        <label>Yelp</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>hat_was_their_total_food_beverage_sales__c</fullName>
        <label>Last years total food/beverage sales?</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>Location Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Vetting_Questionnaire_RelatedList__c</columns>
        <columns>Are_the_VGT_fans_clean__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Live_Location_Organic_Assessment</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Assessment_Status__c</columns>
        <columns>Assessment_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Vetting_Questionnaire__c.Location_Specific_Organic_Assessment</value>
        </filters>
        <label>Live Location - Organic Assessment</label>
    </listViews>
    <nameField>
        <label>Location Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location Assessments</pluralLabel>
    <recordTypes>
        <fullName>Competitor_Location_Assessment</fullName>
        <active>true</active>
        <label>Competitor Opportunity Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legacy_Vetting_Questionnaire</fullName>
        <active>true</active>
        <label>Legacy Vetting Questionnaire</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live_Competitor_Location</fullName>
        <active>true</active>
        <label>Live Competitor Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>Location_Specific_Organic_Assessment</fullName>
        <active>true</active>
        <label>Organic Account Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing_Assessment</fullName>
        <active>true</active>
        <label>Marketing Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organic_Location_Assessment</fullName>
        <active>true</active>
        <label>Organic Opportunity Assessment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Other_Locations_Must_Be_Populated</fullName>
        <active>true</active>
        <description>If it is indicated that the owner has other locations, the user must populate the field &quot;If yes, which locations?&quot;</description>
        <errorConditionFormula>and(ispickval(Does_the_owner_have_other_locations__c,&quot;Yes&quot;), isblank(If_yes_which_location__c), RecordTypeId = &quot;0121I0000007IQa&quot;)</errorConditionFormula>
        <errorMessage>Please supply information about the owner&apos;s other locations.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_of_Chairs_Must_Be_Specified</fullName>
        <active>true</active>
        <description>If the user denotes &quot;Other Quantity&quot; for chairs, they must complete the field &quot;If other, please specify.&quot;</description>
        <errorConditionFormula>and(isblank(If_other_chair__c),(Other_Chair_Quantity__c &gt;0), RecordTypeId = &quot;0121I0000007IQa&quot;)</errorConditionFormula>
        <errorMessage>Please provide details about the other chairs under the field &quot;If other chair, please specify&quot;.</errorMessage>
    </validationRules>
</CustomObject>